chore: work in progress, openrewrite, integration tests failing